--- a/Dolar_PuntoVenta.Presentacion/Dolar_PuntoVenta.Presentacion.csproj
+++ b/Dolar_PuntoVenta.Presentacion/Dolar_PuntoVenta.Presentacion.csproj
@@ -46,7 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Frm_Punto_Venta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Punto_Venta.Designer.cs">
+      <DependentUpon>Frm_Punto_Venta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Frm_Punto_Venta.resx">
+      <DependentUpon>Frm_Punto_Venta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
