--- a/Dolar_PuntoVenta.Presentacion/App.config
+++ b/Dolar_PuntoVenta.Presentacion/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Dolar_PuntoVenta.Presentacion.Properties.Settings.Cn"
+            connectionString="Data Source=DESKTOP-5BMJNVJ\SQLEXPRESS;Initial Catalog=BD_PUNTOVENTA;Persist Security Info=True;User ID=soporte;Password=qwe"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
