--- a/Dolar_PuntoVenta.Presentacion/Properties/Settings.settings
+++ b/Dolar_PuntoVenta.Presentacion/Properties/Settings.settings
@@ -1,7 +1,14 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Dolar_PuntoVenta.Presentacion.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="Cn" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-5BMJNVJ\SQLEXPRESS;Initial Catalog=BD_PUNTOVENTA;Persist Security Info=True;User ID=soporte;Password=qwe&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=DESKTOP-5BMJNVJ\SQLEXPRESS;Initial Catalog=BD_PUNTOVENTA;Persist Security Info=True;User ID=soporte;Password=qwe</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
